@@ -610,7 +610,7 @@ static cnid_t check_cnid(const char *name, cnid_t did, struct stat *st, int adfi
     return db_cnid;
 }
 
-static void check_orphaned(const char *name)
+static int check_orphaned(const char *name)
 {
     int rc;
     struct stat sb;
@@ -623,7 +623,9 @@ static void check_orphaned(const char *name)
     if (rc != 0 && errno == ENOENT) {
         dbd_log(LOGSTD, "Removing orphaned AppleDouble \"%s/%s\"", cwdbuf, name);
         unlink(name);
+        return 1;
     }
+    return 0;
 }
 
 /*
@@ -734,12 +736,13 @@ static int dbd_readdir(int volroot, cnid_t did)
         **************************************************************************/
 
         /* Check for invalid names and orphaned ._ files */
-        if (S_ISREG(st.st_mode) && (strncmp(ep->d_name, "._", strlen("._")) == 0))
-            check_orphaned(ep->d_name);
-
-        if (!vol->vfs->vfs_validupath(vol, ep->d_name)) {
-            dbd_log(LOGSTD, "Ignoring \"%s/%s\"", cwdbuf, ep->d_name);
-            continue;
+        if (S_ISREG(st.st_mode) && (strncmp(ep->d_name, "._", strlen("._")) == 0)) {
+            if (check_orphaned(ep->d_name))
+                continue;
+            if (vol->vfs->vfs_validupath(vol, ep->d_name)) {
+                dbd_log(LOGSTD, "Bad AppleDouble \"%s/%s\"", cwdbuf, ep->d_name);
+                continue;
+            }
         }
 
         /* Check for appledouble file, create if missing, but only if we have addir */
